Wed Oct 15 06:51:13 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_optimization.rb (test_string_eq_neq): new test
	  (test_string_ltlt): ditto

Wed Oct 15 06:50:29 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_optimization.rb (test_hash_aset_with):
	  assert assignment

Wed Oct 15 04:56:27 2014  Zachary Scott  <e@zzak.io>

	* gc.c (rb_obj_id): [DOC] Fix typo, clean up sentence, and wrap cols

Wed Oct 15 04:53:30 2014  Zachary Scott  <e@zzak.io>

	* error.c: [DOC] Fix case of type in exception message by @tricknotes
	  [Fixes GH-740] https://github.com/ruby/ruby/pull/740

	* object.c: ditto

Tue Oct 14 21:39:16 2014  Vit Ondruch  <vondruch@redhat.com>

	* tool/rbinstall.rb (gem): Fix permissions of bundled gems
	  specification files.  [ruby-core:65700] [Bug #10383]

Tue Oct 14 19:15:31 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_record.c: use typed data.

Tue Oct 14 16:23:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (global_symbols): make ids two-dimensional array of
	  strings and symbols, for write-barrier.

	* symbol.c (global_symbols): make IDs immortal always, instead
	  of treating dynamic symbols as IDs.

	* iseq.c, marshal.c, string.c: use rb_str_intern instead of
	  rb_str_dynamic_intern.

	* symbol.c (rb_str_intern): rename rb_str_dynamic_intern.

Tue Oct 14 10:19:10 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_optimization.rb (test_string_freeze): new test
	  (test_hash_aref_with): ditto
	  (test_hash_aset_with): ditto

Tue Oct 14 01:27:54 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (nmin_run): max(n) and max_by(n) returns an array in
	  descending order.
	  [ruby-core:65452] Suggested by David Grayson.

Mon Oct 13 20:44:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (update-gems): chdir to the target directory and then
	  add the tool directory to load paths, for older BASERUBY.
	  [Bug #10372][ruby-core:65630]
